--- a/sections/collection-page.liquid
+++ b/sections/collection-page.liquid
@@ -5,7 +5,7 @@
 {%- assign message               = section.settings.message -%}
 {%- assign show_excerpt          = section.settings.show_excerpt -%}
 {%- assign limit                 = section.settings.limit -%}
-{%- assign color_palette         = section.settings.color_palette -%}
+{%- assign color_scheme          = section.settings.color_scheme -%}
 {%- assign mobile_toggler        = section.settings.mobile_toggler -%}
 {%- assign sticky_sidebar        = section.settings.sticky_sidebar -%}
 {%- assign padding_top           = section.settings.padding_top -%}
@@ -70,7 +70,7 @@
 {%- endcapture -%}
 {% comment %} CSS variables end {% endcomment %}
 
-<div class="collection-page__wrapper{% if color_palette != blank %} palette-{{ color_palette }}{% endif %}{% if padding_top != blank or padding_top_mobile != blank %} collection-page__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} collection-page__wrapper--padding-bottom{%- endif -%}" style="{{- variables | escape -}}">
+<div class="collection-page__wrapper color-{{ color_scheme.id }}{% if padding_top != blank or padding_top_mobile != blank %} collection-page__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} collection-page__wrapper--padding-bottom{%- endif -%}" style="{{- variables | escape -}}">
   <div class="collection-page__container container">
     {%- if section.blocks.size > 0 -%}
       <div class="collection-page__grid">
@@ -126,20 +126,10 @@
         "content": "General settings"
       },
       {
-        "type": "select",
-        "id": "color_palette",
-        "label": "Color palette",
-        "options": [
-          {
-            "value": "one",
-            "label": "Color set 1"
-          },
-          {
-            "value": "two",
-            "label": "Color set 2"
-          }
-        ],
-        "default": "one"
+        "type": "color_scheme",
+        "id": "color_scheme",
+        "label": "Color scheme",
+        "default": "set-1"
       },
       {
         "type": "checkbox",
