--- a/snippets/root-styles.liquid
+++ b/snippets/root-styles.liquid
@@ -11,6 +11,8 @@
       --background-accent-hover-2: {{ scheme.settings.background_accent | append: "1A" }};
       --background-primary:        {{ scheme.settings.background }};
       --background-primary-00:     {{ scheme.settings.background | append: "00" }};
+      --background-primary-10:     {{ scheme.settings.background | append: "1A" }};
+      --background-primary-45:     {{ scheme.settings.background | append: "73" }};
       --background-primary-hover:  {{ scheme.settings.background | append: "1A" }};
       --color-accent:              {{ scheme.settings.color_accent }};
       --color-primary:             {{ scheme.settings.color_primary }};
