--- a/assets/cart.css
+++ b/assets/cart.css
@@ -1,3 +1,8 @@
+.cart__wrapper {
+  color: var(--color-third);
+  background: var(--background-primary);
+}
+
 .cart__container--padding-top {
   padding-top: var(--padding-top-mobile);
 }
@@ -14,16 +19,6 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: 16px;
-}
-
-.palette-one.cart__wrapper {
-  color: var(--color-third-1);
-  background: var(--background-primary-1);
-}
-
-.palette-two.cart__wrapper {
-  color: var(--color-third-2);
-  background: var(--background-primary-2);
 }
 
 @media screen and (min-width: 667px) {
