--- a/assets/collection-page.css
+++ b/assets/collection-page.css
@@ -2,6 +2,11 @@
   width: 100%;
 }
 
+.collection-page__wrapper {
+  background: var(--background-primary);
+  color: var(--color-primary);
+}
+
 .collection-page__wrapper--padding-top {
   padding-top: var(--padding-top-mobile);
 }
@@ -25,16 +30,6 @@
 
 .collection-page .product-card {
   min-width: auto;
-}
-
-.palette-one.collection-page__wrapper {
-  background: var(--background-primary-1);
-  color: var(--color-primary-1);
-}
-
-.palette-two.collection-page__wrapper {
-  background: var(--background-primary-2);
-  color: var(--color-primary-2);
 }
 
 @media (min-width: 768px) {
