--- a/assets/form.css
+++ b/assets/form.css
@@ -35,6 +35,8 @@
   padding: 0 4px;
   transition-duration: var(--animation-duration);
   transition-property: top, color, background-color;
+  background: var(--background-primary);
+  color: var(--color-secondary);
 }
 
 .form__label:not(:has(+ input:focus)):has(+ input:placeholder-shown),
@@ -54,8 +56,10 @@
   width: 100%;
   padding: 8px 16px;
   font-size: 16px;
-  border: 1px solid transparent;
+  border: 1px solid var(--color-border);
   line-height: var(--line-height-xl);
+  color: var(--color-primary);
+  background: var(--background-primary);
 }
 
 .form__textarea {
@@ -72,6 +76,7 @@
   outline: none;
   border-width: 2px;
   padding: 7px 15px;
+  border-color: var(--background-accent);
 }
 
 .form__error-message {
@@ -113,6 +118,7 @@
 .form__info .success {
   background: var(--color-azureish-white);
   color: var(--color-black);
+  border-color: var(--color-border);
 }
 
 .form__info .success i {
@@ -166,52 +172,6 @@ div.form__block--error .form__textarea:focus {
   background-color: var(--color-red-light);
   border-color: var(--color-red);
   color: var(--color-red);
-}
-
-.palette-one .form__label {
-  background: var(--background-primary-1);
-  color: var(--color-secondary-1);
-}
-
-.palette-one .form__input,
-.palette-one .form__textarea {
-  color: var(--color-primary-1);
-  background: var(--background-primary-1);
-  border-color: var(--color-border-1);
-}
-
-.palette-one .form__input:focus,
-.palette-one .form__input:focus-visible,
-.palette-one .form__textarea:focus,
-.palette-one .form__textarea:focus-visible {
-  border-color: var(--background-accent-1);
-}
-
-.palette-one .form__info .success {
-  border-color: var(--color-border-1);
-}
-
-.palette-two .form__label {
-  background: var(--background-primary-2);
-  color: var(--color-secondary-2);
-}
-
-.palette-two .form__input,
-.palette-two .form__textarea {
-  color: var(--color-primary-2);
-  background: var(--background-primary-2);
-  border-color: var(--color-border-2);
-}
-
-.palette-two .form__input:focus,
-.palette-two .form__input:focus-visible,
-.palette-two .form__textarea:focus,
-.palette-two .form__textarea:focus-visible {
-  border-color: var(--background-accent-2);
-}
-
-.palette-two .form__info .success {
-  border-color: var(--color-border-2);
 }
 
 @media (min-width: 992px) {
