--- a/sections/404.liquid
+++ b/sections/404.liquid
@@ -2,7 +2,7 @@
 
 {%- assign description           = section.settings.description -%}
 {%- assign button_label          = section.settings.button_label -%}
-{%- assign color_palette         = section.settings.color_palette -%}
+{%- assign color_scheme          = section.settings.color_scheme -%}
 {%- assign padding_top           = section.settings.padding_top -%}
 {%- assign padding_bottom        = section.settings.padding_bottom -%}
 {%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
@@ -50,7 +50,7 @@
 {% comment %} CSS variables end {% endcomment %}
 
 <div
- class="error-404__content{% if color_palette != blank %} palette-{{ color_palette }}{% endif %}{% if padding_top != blank or padding_top_mobile != blank %} error-404__content--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} error-404__content--padding-bottom{%- endif -%}"
+ class="error-404__content color-{{ color_scheme.id }}{% if padding_top != blank or padding_top_mobile != blank %} error-404__content--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} error-404__content--padding-bottom{%- endif -%}"
  style="{{- variables | escape -}}"
 >
   <div class="error-404__container container">
@@ -110,20 +110,10 @@
         "default": "Sorry, there's nothing here"
       },
       {
-        "type": "select",
-        "id": "color_palette",
-        "label": "Color palette",
-        "options": [
-          {
-            "value": "one",
-            "label": "Color set 1"
-          },
-          {
-            "value": "two",
-            "label": "Color set 2"
-          }
-        ],
-        "default": "two"
+        "type": "color_scheme",
+        "id": "color_scheme",
+        "label": "Color scheme",
+        "default": "set-2"
       },
       {
         "type": "header",
