--- a/sections/cart.liquid
+++ b/sections/cart.liquid
@@ -1,6 +1,6 @@
 {{ "cart.css" | asset_url | stylesheet_tag }}
 
-{%- assign color_palette         = section.settings.color_palette -%}
+{%- assign color_scheme          = section.settings.color_scheme -%}
 {%- assign padding_top           = section.settings.padding_top -%}
 {%- assign padding_bottom        = section.settings.padding_bottom -%}
 {%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
@@ -58,7 +58,7 @@
 {%- include 'variables-cart-totals' -%}
 {% comment %} CSS variables end {% endcomment %}
 
-<div class="cart__wrapper{% if color_palette != blank %} palette-{{ color_palette }}{%- endif -%}" style="{{- variables | escape -}}">
+<div class="cart__wrapper color-{{ color_scheme.id }}" style="{{- variables | escape -}}">
   <div class="cart__container container{% if padding_top != blank or padding_top_mobile != blank %} cart__container--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} cart__container--padding-bottom{%- endif -%}">
 
     <div class="cart__lines">
@@ -84,20 +84,10 @@
         "content": "General settings"
       },
       {
-        "type": "select",
-        "id": "color_palette",
-        "label": "Color palette",
-        "options": [
-          {
-            "value": "one",
-            "label": "Color set 1"
-          },
-          {
-            "value": "two",
-            "label": "Color set 2"
-          }
-        ],
-        "default": "two"
+        "type": "color_scheme",
+        "id": "color_scheme",
+        "label": "Color scheme",
+        "default": "set-1"
       },
       {
         "type": "header",
