--- a/sections/columns.liquid
+++ b/sections/columns.liquid
@@ -3,7 +3,7 @@
 {%- if blocks.size > 0 -%}
   {{ "columns.css" | asset_url | stylesheet_tag }}
 
-  {%- assign color_palette         = section.settings.color_palette -%}
+  {%- assign color_scheme          = section.settings.color_scheme -%}
   {%- assign grid                  = section.settings.grid -%}
   {%- assign padding_top           = section.settings.padding_top -%}
   {%- assign padding_bottom        = section.settings.padding_bottom -%}
@@ -65,7 +65,7 @@
   {%- endcapture -%}
   {% comment %} CSS variables end {% endcomment %}
 
-  <div class="columns__wrapper{% if color_palette != blank %} palette-{{ color_palette }}{% endif %}{% if padding_top != blank or padding_top_mobile != blank %} columns__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} columns__wrapper--padding-bottom{%- endif -%}" style="{{- variables | escape -}}">
+  <div class="columns__wrapper color-{{ color_scheme.id }}{% if padding_top != blank or padding_top_mobile != blank %} columns__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} columns__wrapper--padding-bottom{%- endif -%}" style="{{- variables | escape -}}">
     <div class="columns__container container">
       <div class="columns__grid">
         {%- for block in blocks -%}
@@ -234,20 +234,10 @@
         "content": "General settings"
       },
       {
-        "type": "select",
-        "id": "color_palette",
-        "label": "Color palette",
-        "options": [
-          {
-            "value": "one",
-            "label": "Color set 1"
-          },
-          {
-            "value": "two",
-            "label": "Color set 2"
-          }
-        ],
-        "default": "one"
+        "type": "color_scheme",
+        "id": "color_scheme",
+        "label": "Color scheme",
+        "default": "set-1"
       },
       {
         "type": "header",
