--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -9,12 +9,11 @@
 {%- assign title                 = section.settings.title -%}
 {%- assign description           = section.settings.description -%}
 {%- assign placement             = section.settings.placement -%}
-{%- assign color_palette         = section.settings.color_palette -%}
+{%- assign color_scheme          = section.settings.color_scheme -%}
 {%- assign padding_top           = section.settings.padding_top -%}
 {%- assign padding_bottom        = section.settings.padding_bottom -%}
 {%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
 {%- assign padding_bottom_mobile = section.settings.padding_bottom_mobile -%}
-{%- assign id                    = section.key -%}
 {%- assign image_placeholder     = settings.image_placeholder -%}
 {%- assign background_style      = settings.background_style -%}
 
@@ -199,11 +198,21 @@
   {% endcapture %}
 {%- endif -%}
 
-<div class="contact-form__wrapper form-{{- section.key -}}{% if text_block %} contact-form__wrapper--bg-reverse{% endif %}{% if color_palette != blank %} palette-{{ color_palette }}{% endif %}{% if padding_top != blank or padding_top_mobile != blank %} contact-form__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} contact-form__wrapper--padding-bottom{%- endif -%}" style="{{- variables | escape -}}">
+<div class="contact-form__wrapper form-{{- section.key -}}{% if text_block %} contact-form__wrapper--bg-reverse{% endif %} color-{{ color_scheme.id }}{% if padding_top != blank or padding_top_mobile != blank %} contact-form__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} contact-form__wrapper--padding-bottom{%- endif -%}" style="{{- variables | escape -}}">
   <div class="contact-form__container container">
     <div class="contact-form__inner{% if section.blocks.size > 0 %} contact-form__inner--grid{%- endif -%}">
       <div class="contact-form__form">
-        {%- include "form" -%}
+        {%- render "form",
+            id: section.key,
+            title: title,
+            description: description,
+            name: name,
+            email: email,
+            message: message,
+            success_message: success_message,
+            error_message: error_message,
+            button_label: button_label
+        -%}
       </div>
       {%- if section.blocks.size > 0 -%}
         {{- children -}}
@@ -248,20 +257,10 @@
         "default": "Tell something about your company, describe what you do and what makes you unique."
       },
       {
-        "type": "select",
-        "id": "color_palette",
-        "label": "Color palette",
-        "options": [
-          {
-            "value": "one",
-            "label": "Color set 1"
-          },
-          {
-            "value": "two",
-            "label": "Color set 2"
-          }
-        ],
-        "default": "two"
+        "type": "color_scheme",
+        "id": "color_scheme",
+        "label": "Color scheme",
+        "default": "set-2"
       },
       {
         "type": "header",
