--- a/sections/list-collections.liquid
+++ b/sections/list-collections.liquid
@@ -1,7 +1,7 @@
 {{ "collections.css" | asset_url | stylesheet_tag }}
 
 {%- assign limit                 = section.settings.limit -%}
-{%- assign color_palette         = section.settings.color_palette -%}
+{%- assign color_scheme          = section.settings.color_scheme -%}
 {%- assign color_overlay         = section.settings.color_overlay -%}
 {%- assign padding_top           = section.settings.padding_top -%}
 {%- assign padding_bottom        = section.settings.padding_bottom -%}
@@ -58,7 +58,7 @@
 {% comment %} CSS variables end {% endcomment %}
 
 <div
-  class="collections__wrapper{% if color_palette != blank %} palette-{{ color_palette }}{% endif %}{% if color_overlay != blank %} overlay-{{ color_overlay }}{% endif %}{% if padding_top != blank or padding_top_mobile != blank %} collections__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} collections__wrapper--padding-bottom{%- endif -%}"
+  class="collections__wrapper color-{{ color_scheme.id }}{% if color_overlay != blank %} overlay-{{ color_overlay }}{% endif %}{% if padding_top != blank or padding_top_mobile != blank %} collections__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} collections__wrapper--padding-bottom{%- endif -%}"
   style="{{- variables | escape -}}"
 >
   <div class="collections__container container">
@@ -91,20 +91,10 @@
         "content": "General settings"
       },
       {
-        "type": "select",
-        "id": "color_palette",
-        "label": "Color palette",
-        "options": [
-          {
-            "value": "one",
-            "label": "Color set 1"
-          },
-          {
-            "value": "two",
-            "label": "Color set 2"
-          }
-        ],
-        "default": "one"
+        "type": "color_scheme",
+        "id": "color_scheme",
+        "label": "Color scheme",
+        "default": "set-1"
       },
       {
         "type": "select",
