--- a/sections/locations.liquid
+++ b/sections/locations.liquid
@@ -20,7 +20,7 @@
   {%- assign opener                = section.settings.opener -%}
   {%- assign placement             = section.settings.placement -%}
   {%- assign icon                  = section.settings.icon -%}
-  {%- assign color_palette         = section.settings.color_palette -%}
+  {%- assign color_scheme          = section.settings.color_scheme -%}
   {%- assign padding_top           = section.settings.padding_top -%}
   {%- assign padding_bottom        = section.settings.padding_bottom -%}
   {%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
@@ -184,7 +184,7 @@
   {%- endcapture -%}
 
   <div
-    class="locations__wrapper{% if color_palette != blank %} palette-{{ color_palette }}{% endif %}{% if padding_top != blank or padding_top_mobile != blank %} locations__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} locations__wrapper--padding-bottom{% endif %}"
+    class="locations__wrapper color-{{ color_scheme.id }}{% if padding_top != blank or padding_top_mobile != blank %} locations__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} locations__wrapper--padding-bottom{% endif %}"
     style="{{- variables | escape -}}"
   >
     <div class="locations__container container">
@@ -254,20 +254,10 @@
         "content": "General settings"
       },
       {
-        "type": "select",
-        "id": "color_palette",
-        "label": "Color palette",
-        "options": [
-          {
-            "value": "one",
-            "label": "Color set 1"
-          },
-          {
-            "value": "two",
-            "label": "Color set 2"
-          }
-        ],
-        "default": "one"
+        "type": "color_scheme",
+        "id": "color_scheme",
+        "label": "Color scheme",
+        "default": "set-1"
       },
       {
         "type": "image_picker",
