--- a/sections/login-form.liquid
+++ b/sections/login-form.liquid
@@ -2,7 +2,7 @@
 
 {%- assign title                 = section.settings.title -%}
 {%- assign description           = section.settings.description -%}
-{%- assign color_palette         = section.settings.color_palette -%}
+{%- assign color_scheme          = section.settings.color_scheme -%}
 {%- assign email_label           = section.settings.email_label -%}
 {%- assign password_label        = section.settings.password_label -%}
 {%- assign login_label           = section.settings.login_label -%}
@@ -55,7 +55,7 @@
 {% comment %} CSS variables end {% endcomment %}
 
 <div
-  class="account{% if color_palette != blank %} palette-{{ color_palette }}{% endif %}{% if padding_top != blank or padding_top_mobile != blank %} account--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} account--padding-bottom{%- endif -%}"
+  class="account color-{{ color_scheme.id }}{% if padding_top != blank or padding_top_mobile != blank %} account--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} account--padding-bottom{%- endif -%}"
   style="{{- variables | escape -}}"
 >
   <div class="account__container container">
@@ -206,20 +206,10 @@
         "content": "General settings"
       },
       {
-        "type": "select",
-        "id": "color_palette",
-        "label": "Color palette",
-        "options": [
-          {
-            "value": "one",
-            "label": "Color set 1"
-          },
-          {
-            "value": "two",
-            "label": "Color set 2"
-          }
-        ],
-        "default": "one"
+        "type": "color_scheme",
+        "id": "color_scheme",
+        "label": "Color scheme",
+        "default": "set-1"
       },
       {
         "type": "text",
