--- a/sections/reset-password-form.liquid
+++ b/sections/reset-password-form.liquid
@@ -5,7 +5,7 @@
 {%- assign email_label           = section.settings.email_label -%}
 {%- assign back                  = section.settings.back -%}
 {%- assign reset_password_label  = section.settings.reset_password_label -%}
-{%- assign color_palette         = section.settings.color_palette -%}
+{%- assign color_scheme          = section.settings.color_scheme -%}
 {%- assign padding_top           = section.settings.padding_top -%}
 {%- assign padding_bottom        = section.settings.padding_bottom -%}
 {%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
@@ -52,7 +52,7 @@
 {% comment %} CSS variables end {% endcomment %}
 
 <div
-  class="account{% if color_palette != blank %} palette-{{ color_palette }}{% endif %}{% if padding_top != blank or padding_top_mobile != blank %} account--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} account--padding-bottom{%- endif -%}"
+  class="account color-{{ color_scheme.id }}{% if padding_top != blank or padding_top_mobile != blank %} account--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} account--padding-bottom{%- endif -%}"
   style="{{- variables | escape -}}"
 >
   <div class="account__container container">
@@ -145,20 +145,10 @@
         "content": "General settings"
       },
       {
-        "type": "select",
-        "id": "color_palette",
-        "label": "Color palette",
-        "options": [
-          {
-            "value": "one",
-            "label": "Color set 1"
-          },
-          {
-            "value": "two",
-            "label": "Color set 2"
-          }
-        ],
-        "default": "one"
+        "type": "color_scheme",
+        "id": "color_scheme",
+        "label": "Color scheme",
+        "default": "set-1"
       },
       {
         "type": "text",
