--- a/sections/search.liquid
+++ b/sections/search.liquid
@@ -5,7 +5,7 @@
 
   {%- assign grid                  = section.settings.grid -%}
   {%- assign limit                 = section.settings.limit -%}
-  {%- assign color_palette         = section.settings.color_palette -%}
+  {%- assign color_scheme          = section.settings.color_scheme -%}
   {%- assign mobile_toggler        = section.settings.mobile_toggler -%}
   {%- assign sticky_sidebar        = section.settings.sticky_sidebar -%}
   {%- assign show_excerpt          = section.settings.show_excerpt -%}
@@ -71,7 +71,7 @@
   {%- endcapture -%}
   {% comment %} CSS variables end {% endcomment %}
 
-  <div class="search__wrapper{% if color_palette != blank %} palette-{{ color_palette }}{% endif %}" style="{{- variables | escape -}}">
+  <div class="search__wrapper color-{{- color_scheme.id -}}" style="{{- variables | escape -}}">
     <div class="search__container container{% if padding_top != blank or padding_top_mobile != blank %} search__container--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} search__container--padding-bottom{%- endif -%}">
       {%- if section.blocks.size > 0 -%}
         <div class="search__grid">
@@ -121,20 +121,10 @@
         "content": "General settings"
       },
       {
-        "type": "select",
-        "id": "color_palette",
-        "label": "Color palette",
-        "options": [
-          {
-            "value": "one",
-            "label": "Color set 1"
-          },
-          {
-            "value": "two",
-            "label": "Color set 2"
-          }
-        ],
-        "default": "one"
+        "type": "color_scheme",
+        "id": "color_scheme",
+        "label": "Color scheme",
+        "default": "set-1"
       },
       {
         "type": "checkbox",
