--- a/sections/text.liquid
+++ b/sections/text.liquid
@@ -2,7 +2,7 @@
 
 {%- assign title                 = section.settings.title -%}
 {%- assign text                  = section.settings.text -%}
-{%- assign color_palette         = section.settings.color_palette -%}
+{%- assign color_scheme          = section.settings.color_scheme -%}
 {%- assign align                 = section.settings.align -%}
 {%- assign padding_top           = section.settings.padding_top -%}
 {%- assign padding_bottom        = section.settings.padding_bottom -%}
@@ -66,7 +66,7 @@
 {%- endcapture -%}
 {% comment %} CSS variables end {% endcomment %}
 
-<div class="text__wrapper{% if color_palette != blank %} palette-{{ color_palette }}{% endif %}{% if padding_top != blank or padding_top_mobile != blank %} text__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} text__wrapper--padding-bottom{%- endif -%}"
+<div class="text__wrapper color-{{ color_scheme.id }}{% if padding_top != blank or padding_top_mobile != blank %} text__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} text__wrapper--padding-bottom{%- endif -%}"
      id="text-{{- section.key -}}"
      style="{{- variables | escape -}}"
 >
@@ -105,20 +105,10 @@
         "default": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat."
       },
       {
-        "type": "select",
-        "id": "color_palette",
-        "label": "Color palette",
-        "options": [
-          {
-            "value": "one",
-            "label": "Color set 1"
-          },
-          {
-            "value": "two",
-            "label": "Color set 2"
-          }
-        ],
-        "default": "one"
+        "type": "color_scheme",
+        "id": "color_scheme",
+        "label": "Color scheme",
+        "default": "set-1"
       },
       {
         "type": "select",
