--- a/snippets/breadcrumbs.liquid
+++ b/snippets/breadcrumbs.liquid
@@ -24,6 +24,15 @@
       padding: 30px 0 26px;
       font-size: 14px;
       line-height: var(--line-height-xs);
+      color: var(--color-third);
+    }
+
+    .breadcrumbs path {
+      fill: var(--color-primary);
+    }
+
+    .breadcrumbs a:hover {
+      color: var(--color-primary);
     }
 
     .breadcrumbs__separator {
@@ -36,38 +45,7 @@
       font-weight: var(--font-weight-semibold);
       display: inline-block;
       vertical-align: top;
-    }
-
-    .palette-one .breadcrumbs {
-      color: var(--color-third-1);
-    }
-
-    .palette-one .breadcrumbs path {
-      fill: var(--color-primary-1);
-    }
-
-    .palette-one .breadcrumbs a:hover {
-      color: var(--color-primary-1);
-    }
-
-    .palette-one .breadcrumbs__name {
-      color: var(--color-outline-1);
-    }
-
-    .palette-two .breadcrumbs {
-      color: var(--color-third-2);
-    }
-
-    .palette-two .breadcrumbs path {
-      fill: var(--color-primary-2);
-    }
-
-    .palette-two .breadcrumbs a:hover {
-      color: var(--color-primary-2);
-    }
-
-    .palette-two .breadcrumbs__name {
-      color: var(--color-outline-2);
+      color: var(--color-outline);
     }
   {% endstyle %}
 
